@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-21
+2014-11-05 Mikhail S. Dubrovin
+- add Epix100aBaseV1.h
+
 Tag: V00-05-20
 2014-07-03 Mikhail S. Dubrovin
 - add VarShapeCameraBaseV1.h - for calibration of variable size arrays
